[package]
name = "schemafy-gen"
version = "0.5.0" # VERSION_TAG
authors = ["Markus Westerlind <marwes91@gmail.com>", "Guillaume Balaine <igosuki.github@gmail.com>"]
edition = "2018"

description = "Command line fork of https://github.com/Marwes/schemafy. Generates serializeable Rust types from a json schema"
license = "MIT"

repository = "https://github.com/Igosuki/schemafy"
documentation = "https://docs.rs/schemafy-gen"

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
schemafy_core = { version = "0.5.0", path = "schemafy_core" } # VERSION_TAG
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0" }
serde_derive = "1.0"
syn = "1.0"
clap = "2.33.0"
Inflector = "0.11"
smart-default = "0.6.0"

[features]
internal-regenerate = []
